--- a/corona_news/pubspec.yaml
+++ b/corona_news/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_bloc: ^3.2.0
   http: ^0.12.0+4
   equatable: ^1.1.1  
+  flutter_html: ^0.11.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
